Closed Bug 1636562 Opened 4 years ago Closed 4 years ago

Unsupported ::marker properties can be set with web animations

Categories

(Core :: DOM: Animation, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: Oriol, Assigned: birtles)

References

Details

Attachments

(2 files)

Attached file testcase.html

The ::marker pseudo-element supports a limited set of properties: https://drafts.csswg.org/css-pseudo-4/#marker-pseudo

In Firefox this is controlled by the layout.css.marker.restricted pref, make sure it's set to true (the default).

Then, run the attached testcase:

<ul>
  <li>list item</li>
</ul>
<script>
document.querySelector('li').animate([
  {opacity: 0},
  {opacity: 1},
], {
  pseudoElement: '::marker',
  duration: 1000,
});
</script>

Expected: opacity doesn't apply to ::marker so there should be no animation.
Actual: the opacity is animated.

Presumably we need to check property_restriction() here.

Severity: -- → S3
Blocks: 1637532
See Also: 1637532
Assignee: nobody → brian
Status: NEW → ASSIGNED

https://treeherder.mozilla.org/#/jobs?repo=try&revision=09a12f165cd33b7dc39c3f0ac59c476a70874990
Hopefully some tests give unexpected results here--otherwise this will need tests too

Pushed by bbirtles.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fbf04fb63a8a
Respect property restrictions on pseudo elements when animating; r=boris
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/24694 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: