Bug 1636562 - Respect property restrictions on pseudo elements when animating; r=boris

Differential Revision: https://phabricator.services.mozilla.com/D84306